# harfrust-python

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.md  README.md  RELEASING.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/pyharfrust/: __init__.py  __init__.pyi
src/: buffer.rs  font.rs  glyph.rs  lib.rs  shape.rs  types.rs
tests/: conftest.py  test_buffer.py  test_font.py  test_import.py  test_shaping.py  test_types.py
tests/data/: bundled.tests
